# a2km

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  a2km.gemspec  pyproject.toml
.github/workflows/: release.yaml  test.yaml
a2km/: __init__.py  __main__.py  _cli.py  cli.py  operations.py
lib/: a2km.rb
lib/a2km/: api.rb  command.rb  env.rb  version.rb
tests/: conftest.py  test_cli.py  test_env_kernel.py  test_operations.py
